cluster/common/router.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - web.staging.app-aleks.de
    secretName: tls-prod
  rules:
  - host: web.app-aleks.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aleks-web-service
            port:
              number: 80
  - host: web.backend.app-aleks.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aleks-backend-service
            port:
              number: 80
  - host: web.staging.app-aleks.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aleks-web-staging-service
            port:
              number: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  routes:
    - match: Host(`db.app-aleks.de`)
      kind: Rule
      middlewares:
        - name: adminer-auth
          namespace: default
      services:
        - name: adminer-service
          port: 80
